learn package settings

--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
 	"author": "Flor Sing",
+	"description": "freeCodeCamp tutorial for back end development",
+	"keywords": ["freecodecamp", "back-end", "api"],
+	"license": "MIT",
+	"version": "1.0",
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
 		"express": "^4.14.0"
-	},
+		},
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js"
